<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4F3FF"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="307dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/komponen_android"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/activity"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="activity"
        android:layout_marginStart="71dp"
        android:layout_marginTop="185dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/activity" />

    <Button
        android:id="@+id/service"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="service"
        android:layout_marginStart="71dp"
        android:layout_marginTop="278dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/service" />

    <Button
        android:id="@+id/content"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="378dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/content_provider" />

    <Button
        android:id="@+id/broadcast"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="broadcast"
        android:layout_marginStart="71dp"
        android:layout_marginTop="470dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/broadcast_receiver" />

    <Button
        android:id="@+id/intent"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="intent"
        android:layout_marginStart="71dp"
        android:layout_marginTop="568dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/intent" />

</RelativeLayout>