<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="37dp"
        android:text="@string/intent"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/desk"
        android:layout_width="389dp"
        android:layout_height="513dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="86dp"
        android:text="@string/deks5"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/link3"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="open"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="69dp"
        android:text="@string/link_materi" />

    <Button
        android:id="@+id/synintent"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="synintent"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="69dp"
        android:text="@string/syntax" />

</RelativeLayout>