<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/content_provider"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/desk"
        android:layout_width="389dp"
        android:layout_height="488dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="86dp"
        android:text="@string/desk4"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/link4"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="open"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="69dp"
        android:text="@string/link_materi" />

    <Button
        android:id="@+id/synkonten"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="synkonten"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="69dp"
        android:text="@string/syntax" />

</RelativeLayout>